# ByteShrink-Huffman-Based-File-Compression-Tool

./: .gitignore  CMakeLists.txt  DECOMPRESSOR_README.md  README.md  run_gui.bat
data/input/: sample.txt  test_gui_decompressed.txt
gui/: MainWindow.cpp  MainWindow.h  main.cpp  style.qss
include/: HuffmanCompressor.h  HuffmanDecompressor.h  HuffmanNode.h  HuffmanTree.h
main/: decompressor_main.cpp  main.cpp
src/: HuffmanCompressor.cpp  HuffmanDecompressor.cpp  HuffmanTree.cpp
